# AthleteX

./: .gitignore  .tsconfig.json  README.md  TODO.md  capacitor.config.json  gulpfile.js  package.json  tsconfig.json
H2H/: Cargo.toml
H2H/src/: entrypoint.rs  lib.rs
H2H/src/processor/: mod.rs  process.rs  process_enter_queue.rs  process_enterqueue.rs  process_init_root.rs  process_join_or_create_match.rs
H2H/src/structs/: match.rs  match_list.rs  mod.rs  root.rs
android/: settings.gradle
android/app/: build.gradle
android/athleteequity/: build.gradle
android/default-phone-tablet/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
contracts/: 721Emitter.sol  Biden.sol  ExchangeRates.sol  HelloWorld.sol  README.md  Trump.sol  gold.sol
fantasy-sports/: .eslintcache  package.json
front-end/public/: index.html
front-end/src/: fighters.js  index.js  routes.js
front-end/src/views/: Dashboard.js  Icons.js  Map.js  Rtl.js  (+4 more)
public/: index.html  manifest.json
src/: fighters.js  index.js  oldFighters.js  routes.js  transactionHistory.js
src/.utils/: connection.tsx
src/components/: Fighters.js
src/sdk/: AEthletes.ts  AtheleteFactory.ts  BasketBallAthlete.ts  MMAAthlete.ts  athletes.js  athletes.ts  feeAccount.ts  fighters.js  globals.js  instructions.ts  loadAthletes.ts  metamask.ts  states.ts
src/utils/: connection.tsx  fetch-loop.ts  global.js  notifications.js  utils.ts  wallet.js
src/views/: Dashboard.js  Icons.js  JoinLeagues.js  Landing.js  Leagues.js  Map.js  OwnedAthlete.js  Rtl.js  TableList.js  Typography.js  YourWallet.js
(+61 files in other folders)
