[package]
name = "H2H"
version = "0.1.0"
authors = ["Matthew Klengson <mklengs@clemson.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.4.17"
arrayref = "0.3.6"

[features]
exclude_entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]